force-app/main/default/objects/Deal__c/Deal__c.object-meta.xml
<CustomObject>
    <description>Sales Manager may have many deals for same car (different time periods) and same car may have many deals made by various Sales Managers.</description>
    <label>Deal</label>
    <nameField>
        <label>Deal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>