force-app/main/default/objects/Deal__c/fields/Car__c.field-meta.xml
<CustomField>
    <fullName>Car__c</fullName>
    <label>Car</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Car__c.Is_Valid_For_Rent__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Car__c</referenceTo>
    <relationshipLabel>Deals</relationshipLabel>
    <relationshipName>Deals</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>