force-app/main/default/objects/Deal__c/fields/End_date__c.field-meta.xml
<CustomField>
    <fullName>End_date__c</fullName>
    <description>End date of rent</description>
    <label>End date</label>
    <type>Date</type>
</CustomField>