force-app/main/default/objects/Deal__c/fields/Sales_manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_manager__c</fullName>
    <label>Sales manager</label>
    <referenceTo>Sales_manager__c</referenceTo>
    <relationshipLabel>Deals</relationshipLabel>
    <relationshipName>Deals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>