force-app/main/default/objects/Deal__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>(Open, Won, Lost) Status of rent.
Open (DEFAULT) - there is a cliend who called and asked for a car. Car was reserved but no money paid yet.
Won - deal was successfull, money paid, car rent.
Lost - client refused to pay or cancelled the order.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>