force-app/main/default/objects/Deal__c/validationRules/Logic.validationRule-meta.xml
<ValidationRule>
    <fullName>Logic</fullName>
    <active>true</active>
    <description>Deal start date should not be bigger than Deal end date</description>
    <errorConditionFormula>End_date__c  &lt;=  Start_Date__c</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Deal start date should not be bigger than Deal end date</errorMessage>
</ValidationRule>