force-app/main/default/objects/Deal__c/validationRules/Test.validationRule-meta.xml
<ValidationRule>
    <fullName>Test</fullName>
    <active>true</active>
    <errorConditionFormula>isnew() &amp;&amp; text(Status__c)  &lt;&gt; &quot;Open&quot;</errorConditionFormula>
    <errorMessage>test</errorMessage>
</ValidationRule>