force-app/main/default/objects/Deal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Car__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>